# agentic-forge

./: .gitignore  .markdownlint-cli2.jsonc  .prettierignore  .prettierrc  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  TODO.md  claude-plugins.code-workspace  output-fixes.md  package-lock.json  package.json  pnpm-lock.yaml  ruff.toml  sdlc-enhanced.md
.claude/: checkpoints.md  (+4 more)
experimental-plugins/agentic-core/: .env.example  .gitignore  README.md  pyproject.toml
experimental-plugins/agentic-core/docker/: docker-compose.yml  init.sql
experimental-plugins/agentic-core/personas/: architect.md  developer.md  facilitator.md  planner.md
experimental-plugins/agentic-core/src/agentic_core/: __init__.py  cli.py  runner.py
experimental-plugins/agentic-core/src/agentic_core/agents/: __init__.py  pool.py  session.py
experimental-plugins/agentic-core/src/agentic_core/checkpoints/: __init__.py  recovery.py
experimental-plugins/agentic-core/src/agentic_core/git/: __init__.py  operations.py  worktree.py
experimental-plugins/agentic-core/src/agentic_core/inputs/: __init__.py  processors.py
experimental-plugins/agentic-core/src/agentic_core/meetings/: __init__.py  documents.py  facilitator.py  orchestrator.py  state.py
experimental-plugins/agentic-core/templates/: feature-summary.md  pr-description.md
experimental-plugins/agentic-core/tests/: __init__.py  test_cli.py  test_providers.py  test_workflow.py
experimental-plugins/agentic-sdlc/: README.md  pyproject.toml
experimental-plugins/agentic-sdlc/commands/: design.md  implement-from-plan.md  plan-build.md  plan.md  review.md
experimental-plugins/agentic-sdlc/src/claude_sdlc/: __init__.py  orchestrator.py
experimental-plugins/agentic-workflows/: CLAUDE.example.md  README.md  pyproject.toml
experimental-plugins/agentic-workflows/agents/: reviewer.md
experimental-plugins/agentic-workflows/commands/: analyse.md  build.md  validate.md
experimental-plugins/agentic-workflows/commands/git/: branch.md  commit.md  pr.md  worktree.md
experimental-plugins/agentic-workflows/schemas/: config.schema.json  progress.schema.json  workflow.schema.json
experimental-plugins/agentic-workflows/skills/: create-log.md  create-memory.md  search-memory.md
experimental-plugins/agentic-workflows/src/agentic_workflows/: __init__.py  cli.py  console.py  executor.py  orchestrator.py  parser.py  progress.py  ralph_loop.py  runner.py
experimental-plugins/agentic-workflows/templates/: plan-chore.md.j2  plan-feature.md.j2
experimental-plugins/agentic-workflows/templates/analysis/: debt.md.j2  doc.md.j2
experimental-plugins/agentic-workflows/workflows/: analyse-codebase.yaml  plan-build-validate.yaml  ralph-loop-example.yaml
plugins/agentic-sdlc/: CHANGELOG.md  CLAUDE.example.md  README.md  pyproject.toml
plugins/agentic-sdlc/agents/: explorer.md  reviewer.md
plugins/agentic-sdlc/commands/: add-improvement.md  analyse.md  build.md  configure.md  design.md  implement.md  orchestrate.md  plan-bug.md  plan-build.md  plan-chore.md  plan-feature.md  plan.md  review.md  test.md  validate.md
plugins/agentic-sdlc/commands/analyse/: analyse-bug.md  analyse-debt.md  analyse-doc.md  analyse-security.md  analyse-style.md
plugins/agentic-sdlc/commands/analyze/: analyze-bug.md  analyze-debt.md  analyze-doc.md  analyze-security.md  analyze-style.md
plugins/agentic-sdlc/commands/git/: branch.md  git-branch.md  git-commit.md  git-pr.md  pr.md
plugins/agentic-sdlc/docs/: Contributing.md  QuickStart.md  WorkflowBuilder.md  workflow-example.yaml
plugins/agentic-sdlc/prompts/: agentic-system.md
plugins/agentic-sdlc/schemas/: README.md  config.schema.json  progress.schema.json  step-output.schema.json  workflow.schema.json
plugins/agentic-sdlc/skills/: create-checkpoint.md  create-log.md  create-memory.md  fix-analysis.md  search-memory.md
plugins/agentic-sdlc/skills/add-improvement/: SKILL.md
plugins/agentic-sdlc/skills/analyze/: SKILL.md
plugins/agentic-sdlc/skills/create-checkpoint/: SKILL.md
plugins/agentic-sdlc/skills/create-log/: SKILL.md
plugins/agentic-sdlc/skills/create-skill/: SKILL.md  template.md
plugins/agentic-sdlc/skills/fix-analyze/: SKILL.md
plugins/agentic-sdlc/skills/git-branch/: SKILL.md
plugins/agentic-sdlc/skills/git-commit/: SKILL.md
plugins/agentic-sdlc/skills/git-pr/: SKILL.md
plugins/agentic-sdlc/skills/orchestrate/: SKILL.md
plugins/agentic-sdlc/skills/plan/: SKILL.md
plugins/agentic-sdlc/skills/review/: SKILL.md
plugins/agentic-sdlc/skills/sdlc-plan/: SKILL.md
plugins/agentic-sdlc/skills/sdlc-review/: SKILL.md
plugins/agentic-sdlc/skills/validate/: SKILL.md
plugins/agentic-sdlc/src/agentic_sdlc/: __init__.py  cli.py  config.py  console.py  executor.py  orchestrator.py  parser.py  progress.py  ralph_loop.py  renderer.py  runner.py  signal_manager.py
plugins/agentic-sdlc/src/claude_sdlc/: __init__.py  cli.py  orchestrator.py
plugins/agentic-sdlc/tests/: __init__.py  conftest.py  test_config.py  test_console.py  test_executor.py  test_git_worktree.py  test_parser.py  test_progress.py  test_ralph_loop.py  test_renderer.py  test_runner.py  test_steps.py
plugins/core/: README.md  pyproject.toml
plugins/core/commands/: create-gh-issue.md  git-branch.md  git-commit.md  git-pr.md  git-worktree.md
plugins/core/src/claude_core/: __init__.py  logging.py  orchestrator.py  worktree.py
plugins/development/: Notes.md  README.md  pyproject.toml
plugins/development/.claude-plugin/: plugin.json
plugins/development/commands/: create-readme-plan.md  demo-bye.md  demo-hello.md  implement-from-plan.md  plan-dev.md
plugins/development/examples/: hello_demo.py  parallel_edit_demo.py  plan_then_implement_demo.py
plugins/development/src/claude_workflows/: __init__.py  cli.py  runner.py  worktree.py
plugins/development/workflows/: __init__.py  runner.py
plugins/sdlc/: README.md  pyproject.toml
plugins/sdlc/commands/: implement.md  plan-chore.md  plan-feature.md  test.md
plugins/sdlc/docs/: python-orchestration-plan.md
plugins/sdlc/src/claude_sdlc/: __init__.py  cli.py
(+302 files in other folders)
