[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-forge-agentic-sdlc"
version = "2.0.0"
description = "Fully autonomous SDLC workflows for Claude Code - no user interaction, designed for CI/CD integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Etienne St-Pierre", email = "me@estpierre.dev" }
]
keywords = [
    "claude",
    "claude-code",
    "sdlc",
    "autonomous",
    "agentic",
    "orchestration",
    "ci-cd",
    "workflows"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

# Depends on agentic-forge-core for runner and orchestrator
dependencies = [
    "agentic-forge-core>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/e-stpierre/agentic-forge"
Repository = "https://github.com/e-stpierre/agentic-forge"
Documentation = "https://github.com/e-stpierre/agentic-forge/tree/main/plugins/agentic-sdlc"

[project.scripts]
# Agentic autonomous workflows (JSON I/O for CI/CD)
agentic-sdlc = "claude_sdlc.cli:agentic_main"
agentic-workflow = "claude_sdlc.cli:agentic_workflow_main"
agentic-plan = "claude_sdlc.cli:agentic_plan_main"
agentic-build = "claude_sdlc.cli:agentic_build_main"
agentic-validate = "claude_sdlc.cli:agentic_validate_main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_sdlc"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
