[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-plugins-core"
version = "1.0.0"
description = "Foundation Python package for Claude Code plugins - CLI runner, orchestrator, and structured logging"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Etienne St-Pierre", email = "me@estpierre.dev" }
]
keywords = [
    "claude",
    "claude-code",
    "cli",
    "orchestration",
    "workflows",
    "automation",
    "plugins"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

# No external dependencies - uses only stdlib
dependencies = []

[project.urls]
Homepage = "https://github.com/e-stpierre/claude-plugins"
Repository = "https://github.com/e-stpierre/claude-plugins"
Documentation = "https://github.com/e-stpierre/claude-plugins/tree/main/plugins/core"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_core"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
