[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-workflows"
version = "1.0.0"
description = "Python orchestration toolkit for Claude Code CLI workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Étienne St-Pierre", email = "me@estpierre.dev" }
]
keywords = [
    "claude",
    "claude-code",
    "cli",
    "orchestration",
    "workflows",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

# No external dependencies required - uses only stdlib
dependencies = []

[project.urls]
Homepage = "https://github.com/e-stpierre/claude-plugins"
Repository = "https://github.com/e-stpierre/claude-plugins"
Documentation = "https://github.com/e-stpierre/claude-plugins/tree/main/plugins/development"

[project.scripts]
claude-hello = "claude_workflows.cli:hello"
claude-bye = "claude_workflows.cli:bye"
claude-parallel = "claude_workflows.cli:parallel"
claude-plan = "claude_workflows.cli:plan"
claude-workflows = "claude_workflows.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_workflows"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
