[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-plugins-sdlc"
version = "2.0.0"
description = "Software Development Lifecycle workflows for Claude Code - planning, implementation, review, and testing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Etienne St-Pierre", email = "me@estpierre.dev" }
]
keywords = [
    "claude",
    "claude-code",
    "sdlc",
    "planning",
    "implementation",
    "review",
    "testing",
    "workflows"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

# Depends on claude-plugins-core for runner and orchestrator
dependencies = [
    "claude-plugins-core>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/e-stpierre/claude-plugins"
Repository = "https://github.com/e-stpierre/claude-plugins"
Documentation = "https://github.com/e-stpierre/claude-plugins/tree/main/plugins/sdlc"

[project.scripts]
claude-sdlc = "claude_sdlc.cli:main"
claude-feature = "claude_sdlc.workflows.feature:main"
claude-bugfix = "claude_sdlc.workflows.bugfix:main"
claude-parallel = "claude_sdlc.commands.parallel:parallel"
claude-plan = "claude_sdlc.commands.plan:plan"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_sdlc"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
